--- a/request-panel.html
+++ b/request-panel.html
@@ -45,7 +45,8 @@ the License.
       query-model="{{editorRequest.queryModel}}"
       oauth2-redirect-uri="[[oauth2RedirectUri]]"
       events-target="[[eventsTarget]]"
-      readonly="[[readonly]]">
+      readonly="[[readonly]]"
+      state="{{editorState}}">
       <slot name="request-context-menu" slot="request-context-menu"></slot>
     </request-editor>
     <template is="dom-if" if="[[loading]]">
@@ -212,7 +213,12 @@ the License.
         /**
          * When set it renders editors in read only mode.
          */
-        readonly: Boolean
+        readonly: Boolean,
+        /**
+         * Request editor UI state object.
+         * @type {Object}
+         */
+        editorState: {type: Object, notify: true}
       };
     }
 
