--- a/request-panel.html
+++ b/request-panel.html
@@ -58,12 +58,12 @@ the License.
         response="[[response]]"
         response-error="[[responseError]]"
         is-error="[[isErrorResponse]]"
-        is-xhr="[[responseIsXhr]]"
-        loading-time="{{loadingTime}}"
-        redirects="[[redirects]]"
-        redirect-timings="[[redirectsTiming]]"
-        response-timings="[[timing]]"
-        sent-http-message="[[sourceMessage]]"></response-view>
+        is-xhr="[[responseMeta.responseIsXhr]]"
+        loading-time="{{responseMeta.loadingTime}}"
+        redirects="[[responseMeta.redirects]]"
+        redirect-timings="[[responseMeta.redirectsTiming]]"
+        response-timings="[[responseMeta.timing]]"
+        sent-http-message="[[responseMeta.sourceMessage]]"></response-view>
     </template>
   </template>
   <script>
@@ -126,7 +126,7 @@ the License.
         /**
          * Created by the transport ARC `response` object.
          */
-        response: Object,
+        response: {notify: true, type: Object},
         /**
          * Computed value, true, when the response object is set.
          */
@@ -135,13 +135,25 @@ the License.
           computed: '_computeHasResponse(response)'
         },
         /**
-         * If set then it renders an option in request context menu to
-         * toggle to XHR request via the extension. This information is passed
-         * to the request editor element.
-         *
-         * It's only relevant to ARC Chrome appeditorRequest.
+         * Request and response meta data passed to the response view.
+         * Keys:
+         * - responseIsXhr (Boolean) - True if the response is made by the
+         * Fetch or XHR api.
+         * - loadingTime (Number) - Response full loading time. This information
+         * is received from the transport library.
+         * - timing {Object} - If the transport method is able to collect
+         * detailed information about request timings then this value will
+         * be set. It's the `timings` property from the HAR 1.2 spec.
+         * - redirectsTiming (Array) - If the transport method is able to
+         * collect detailed information about redirects timings then this value
+         * will be set. It's a list of `timings` property from the HAR 1.2 spec.
+         * - redirects (Array) - It will be set if the transport method can
+         * generate information about redirections.
+         * - sourceMessage (String) - Http message sent to the server.
+         * This information should be available only in case of advanced
+         * HTTP transport.
          */
-        xhrExtension: Boolean,
+        responseMeta: {notify: true, type: Object},
         /**
          * Redirect URL for the OAuth2 authorization.
          * If can be also set by dispatching `oauth2-redirect-url-changed`
@@ -151,43 +163,11 @@ the License.
         /**
          * A flag indincating request error.
          */
-        isErrorResponse: Boolean,
-        /**
-         * True if the response is made by the Fetch / XHR api.
-         */
-        responseIsXhr: {
-          type: Boolean,
-          value: true
-        },
+        isErrorResponse: {notify: true, type: Boolean},
         /**
          * An error object associated with the response when error.
          */
-        responseError: Object,
-        /**
-         * Response full loading time. This information is received from the
-         * transport library.
-         */
-        loadingTime: Number,
-        /**
-         * If the transport method is able to collect detailed information about request timings
-         * then this value will be set. It's the `timings` property from the HAR 1.2 spec.
-         */
-        timing: Object,
-        /**
-         * If the transport method is able to collect detailed information about redirects timings
-         * then this value will be set. It's a list of `timings` property from the HAR 1.2 spec.
-         */
-        redirectsTiming: Array,
-        /**
-         * It will be set if the transport method can generate information about redirections.
-         */
-        redirects: Array,
-        /**
-         * Http message sent to the server.
-         *
-         * This information should be available only in case of advanced HTTP transport.
-         */
-        sourceMessage: String,
+        responseError: {notify: true, type: Object},
         /**
          * ID of latest request.
          * It is received from the `api-request-editor` when `api-request`
@@ -305,15 +285,17 @@ the License.
     _propagateResponse(data) {
       this.isErrorResponse = data.isError;
       this.responseError = data.isError ? data.error : undefined;
-      this.loadingTime = data.loadingTime;
       this.request = data.request;
       this.response = data.response;
       const isXhr = data.isXhr === false ? false : true;
-      this.responseIsXhr = isXhr;
-      this.redirects = isXhr ? undefined : data.redirects;
-      this.redirectsTiming = isXhr ? undefined : data.redirectsTiming;
-      this.timing = isXhr ? undefined : data.timing;
-      this.sourceMessage = data.sentHttpMessage;
+      this.responseMeta = {
+        loadingTime: data.loadingTime,
+        responseIsXhr: isXhr,
+        redirects: isXhr ? undefined : data.redirects,
+        redirectsTiming: isXhr ? undefined : data.redirectsTiming,
+        timing: isXhr ? undefined : data.timing,
+        sourceMessage: data.sentHttpMessage
+      };
     }
     /**
      * Updates value of the request URL from `url-change-action`
@@ -334,30 +316,13 @@ the License.
     clearResponse() {
       this.isErrorResponse = undefined;
       this.responseError = undefined;
-      if (this.loadingTime) {
-        this.loadingTime = undefined;
-      }
       if (this.request) {
         this.request = undefined;
       }
       if (this.response) {
         this.response = undefined;
       }
-      if (this.responseIsXhr !== undefined) {
-        this.responseIsXhr = undefined;
-      }
-      if (this.redirects) {
-        this.redirects = undefined;
-      }
-      if (this.redirectsTiming) {
-        this.redirectsTiming = undefined;
-      }
-      if (this.timing) {
-        this.timing = undefined;
-      }
-      if (this.sourceMessage) {
-        this.sourceMessage = undefined;
-      }
+      this.responseMeta = {};
     }
 
     _boundEventsChanged(value) {
