--- a/test/request-panel-test.html
+++ b/test/request-panel-test.html
@@ -45,7 +45,7 @@
             done();
           });
           const editor = element.shadowRoot.querySelector('request-editor');
-          editor._sendRequest();
+          editor.send();
         });
       });
     });
