--- a/demo/index.html
+++ b/demo/index.html
@@ -28,10 +28,13 @@
   <link rel="import" href="../../neon-animation/web-animations.html">
   <link rel="import" href="../../variables-evaluator/variables-evaluator.html">
   <link rel="import" href="../../variables-manager/variables-manager.html">
-  <link rel="import" href="../../url-history-saver/url-history-saver.html">
   <link rel="import" href="../../paper-toast/paper-toast.html">
   <link rel="import" href="../../oauth-authorization/oauth2-authorization.html">
   <link rel="import" href="../../oauth-authorization/oauth1-authorization.html">
+  <link rel="import" href="../../arc-models/url-history-model.html">
+  <link rel="import" href="../../arc-models/variables-model.html">
+  <link rel="import" href="../../jexl/jexl.html">
+  <link rel="import" href="../../iron-media-query/iron-media-query.html">
   <link rel="import" href="../../paper-dropdown-menu/paper-dropdown-menu.html">
   <link rel="import" href="../../paper-listbox/paper-listbox.html">
   <link rel="import" href="../../paper-item/paper-item.html">
@@ -70,7 +73,8 @@
 </head>
 
 <body unresolved>
-  <url-history-saver></url-history-saver>
+  <url-history-model></url-history-model>
+  <variables-model></variables-model>
   <variables-manager></variables-manager>
   <variables-evaluator id="eval" no-before-request></variables-evaluator>
   <oauth2-authorization></oauth2-authorization>
@@ -85,9 +89,10 @@
 
   <dom-bind id="demo">
     <template>
+      <iron-media-query query="(max-width: 768px)" query-matches="{{narrow}}"></iron-media-query>
       <div class="vertical-section-container centered">
         <section class="card">
-          <request-panel editor-request="[[request]]" oauth2-redirect-uri="[[oauth2RedirectUri]]"></request-panel>
+          <request-panel editor-request="[[request]]" oauth2-redirect-uri="[[oauth2RedirectUri]]" narrow="[[narrow]]"></request-panel>
         </section>
         <section class="card">
           <h4>Load request</h4>
