--- a/demo/index.html
+++ b/demo/index.html
@@ -1,46 +1,68 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>request-panel demo</title>
-  <script>
-  if (location.search.indexOf('response_type') !== -1 &&
-    location.search.indexOf('redirect_uri') !== -1) {
-    // OAUTH DEMO
-    var p = new URLSearchParams(location.search);
-    var state = p.get('state');
-    var type = p.get('response_type');
-    var red = p.get('redirect_uri');
-    red += '?state=' + state;
-    if (type === 'token') {
-      red += '&access_token=ya.12345.asdfghh';
-    } else {
-      red += '&code=12345Zasdfghh';
+  <script type="module">
+    if (location.search.indexOf('response_type') !== -1 &&
+      location.search.indexOf('redirect_uri') !== -1) {
+      // OAUTH DEMO
+      var p = new URLSearchParams(location.search);
+      var state = p.get('state');
+      var type = p.get('response_type');
+      var red = p.get('redirect_uri');
+      red += '?state=' + state;
+      if (type === 'token') {
+        red += '&access_token=ya.12345.asdfghh';
+      } else {
+        red += '&code=12345Zasdfghh';
+      }
+      location.href = red;
     }
-    location.href = red;
-  }
   </script>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../app-pouchdb/pouchdb.html">
-  <link rel="import" href="../../neon-animation/web-animations.html">
-  <link rel="import" href="../../variables-evaluator/variables-evaluator.html">
-  <link rel="import" href="../../variables-manager/variables-manager.html">
-  <link rel="import" href="../../paper-toast/paper-toast.html">
-  <link rel="import" href="../../oauth-authorization/oauth2-authorization.html">
-  <link rel="import" href="../../oauth-authorization/oauth1-authorization.html">
-  <link rel="import" href="../../arc-models/url-history-model.html">
-  <link rel="import" href="../../arc-models/variables-model.html">
-  <link rel="import" href="../../jexl/jexl.html">
-  <link rel="import" href="../../iron-media-query/iron-media-query.html">
-  <link rel="import" href="../../paper-dropdown-menu/paper-dropdown-menu.html">
-  <link rel="import" href="../../paper-listbox/paper-listbox.html">
-  <link rel="import" href="../../paper-item/paper-item.html">
-  <link rel="import" href="../../arc-electron-default-theme/arc-electron-default-theme.html">
-  <link rel="import" href="../request-panel.html">
-  <script type="text/javascript" src="../../chance/chance.js"></script>
+
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../web-animations-js/web-animations-next.min.js"></script>
+
+  <script type="module" src="../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/variables-evaluator/variables-evaluator.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/variables-manager/variables-manager.js"></script>
+  <script type="module" src="../../../@polymer/paper-toast/paper-toast.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/oauth-authorization/oauth2-authorization.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/oauth-authorization/oauth1-authorization.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/arc-models/url-history-model.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/arc-models/variables-model.js"></script>
+  <script type="module" src="../../../@polymer/iron-media-query/iron-media-query.js"></script>
+  <script type="module" src="../../../@polymer/paper-dropdown-menu/paper-dropdown-menu.js"></script>
+  <script type="module" src="../../../@polymer/paper-listbox/paper-listbox.js"></script>
+  <script type="module" src="../../../@polymer/paper-item/paper-item.js"></script>
+  <script type="module" src="../../../@advanced-rest-client/arc-electron-default-theme/arc-electron-default-theme.js"></script>
+  <script type="module" src="../request-panel.js"></script>
+
+  <script type="text/javascript" src="../../../chance/chance.js"></script>
+  <script type="text/javascript" src="../dev-lib/jexl.min.js"></script>
+
+  <!-- CodeMirror + modes loader -->
+  <script src="../../../codemirror/lib/codemirror.js"></script>
+  <script src="../../../codemirror/addon/mode/loadmode.js"></script>
+  <script src="../../../codemirror/mode/meta.js"></script>
+  <!--Default set of parsers, add as many as you need -->
+  <script src="../../../codemirror/mode/javascript/javascript.js"></script>
+  <script src="../../../codemirror/mode/xml/xml.js"></script>
+  <script src="../../../codemirror/mode/htmlmixed/htmlmixed.js"></script>
+  <!-- JSON linter -->
+  <script src="../../../jsonlint/lib/jsonlint.js"></script>
+  <script src="../../../codemirror/addon/lint/lint.js"></script>
+  <script src="../../../codemirror/addon/lint/json-lint.js"></script>
+  <!-- Headers hint support -->
+  <script src="../../../@advanced-rest-client/code-mirror-hint/headers-addon.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/show-hint.js"></script>
+  <script src="../../../@advanced-rest-client/code-mirror-hint/hint-http-headers.js"></script>
+
+  <script>
+  CodeMirror.modeURL = '../../../codemirror/mode/%N/%N.js';
+  </script>
+
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     body,
@@ -72,11 +94,11 @@
   </custom-style>
 </head>
 
-<body unresolved>
+<body unresolved="">
   <url-history-model></url-history-model>
   <variables-model></variables-model>
   <variables-manager></variables-manager>
-  <variables-evaluator id="eval" no-before-request></variables-evaluator>
+  <variables-evaluator id="eval" no-before-request jexl-path="ArcVariables.JexlDev"></variables-evaluator>
   <oauth2-authorization></oauth2-authorization>
   <oauth1-authorization></oauth1-authorization>
   <paper-toast id="transportToast" text="api-request event handled"></paper-toast>
@@ -106,7 +128,7 @@
       </div>
     </template>
   </dom-bind>
-  <script>
+  <script type="module">
   const Demo = {
     sendEvent: function(type, details, cancelable, node) {
       const e = new CustomEvent(type, {
@@ -322,5 +344,4 @@
   })(document.getElementById('demo'));
   </script>
 </body>
-
 </html>
